# datalite

./: Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: generator-generic-ossf-slsa3-publish.yml
benchmarks/: Cargo.toml
src/catalog/src/: lib.rs
src/common/error/: Cargo.toml
src/common/error/src/: errors.rs  lib.rs  status.rs
src/common/utils/: Cargo.toml
src/datatypes/: Cargo.toml
src/datatypes/src/: array.rs  errors.rs  lib.rs  macros.rs  scalar.rs  types.rs  values.rs
src/datatypes/src/array/: dyn_array.rs  impls.rs  iterator.rs  list_array.rs  primitive_array.rs  primitives.rs
src/datatypes/src/scalar/: bytes.rs  impls.rs  jsonb.rs  list.rs  map.rs  times.rs
src/datatypes/src/types/: numbers.rs  type_numbers.rs
src/datatypes/src/values/: jsonb.rs  list.rs  map.rs  numbers.rs  string.rs  times.rs
