[package]
name = "datatypes"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
common-error = { path = "../common/error" }
clap.workspace = true
tokio.workspace = true
parse-display.workspace = true
enum-as-inner.workspace = true
ordered-float.workspace = true
serde.workspace = true
snafu.workspace = true

