[package]
name = "datatypes"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
common-error = { path = "../common/error" }
common-utils = { path = "../common/utils" }
clap.workspace = true
tokio.workspace = true
parse-display.workspace = true
enum-as-inner.workspace = true
ordered-float.workspace = true
serde.workspace = true
snafu.workspace = true
bytes.workspace = true
serde_json.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
rust_decimal.workspace = true

